# LLM_Voice_Flow

llm/rknn-llm/examples/DeepSeek-R1-Distill-Qwen-1.5B_Demo/deploy/: CMakeLists.txt
llm/rknn-llm/examples/DeepSeek-R1-Distill-Qwen-1.5B_Demo/deploy/src/: llm_demo.cpp
tts/: CMakeLists.txt
tts/tts_server/include/: Utils.h
tts/tts_server/src/: MessageQueue.cpp
voice/sherpa-onnx/sherpa-onnx/voice/: CMakeLists.txt  sherpa-onnx-microphone.cc
zmq-comm-kit/: CMakeLists.txt
